# Legend-of-Sword-and-Fairy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
examples/: battlerecord.rs  framedump.rs  voicedump.rs  yj1dump.rs
resources/hd/: README.md
rustpal/: README.md
rustpal/examples/: battledump.rs  newgame.rs  rixdump.rs  uidump.rs
rustpal/src/: audio.rs  battle.rs  data.rs  ending.rs  fight.rs  font.rs  game_loop.rs  global.rs  input.rs  itemmenu.rs  lib.rs  magicmenu.rs  main.rs  mkf.rs  opl.rs  play.rs  res.rs  rix.rs  rngplay.rs  scene.rs  script.rs  surface.rs  text.rs  ui.rs  uibattle.rs  uigame.rs  voc.rs  yj.rs
rustpal/tests/: walkthrough.rs
src/: audio.rs  battle.rs  data.rs  ending.rs  fight.rs  font.rs  game_loop.rs  global.rs  input.rs  itemmenu.rs  lib.rs  magicmenu.rs  map.rs  mkf.rs  native_upscale.rs  opl.rs  palette.rs  play.rs  res.rs  rix.rs  rngplay.rs  scene.rs  script.rs  surface.rs  text.rs  ui.rs  uibattle.rs  uigame.rs  voc.rs  voice.rs  web.rs
src/native_upscale/: bench.rs
src/shaders/: native_upscale.wgsl  native_upscale_blit.wgsl  native_upscale_mid.wgsl  native_upscale_mid_fast.wgsl
tests/: walkthrough.rs
tools/voice/: README.md  emotions.json  gen_voices.py  minimax.py  minimax_voices.json  pyproject.toml  voice_manifest.json  voice_map.json
web/: build.sh  index.html  main.js  nn-dp4a-results.md  nn-mega.html  nn-tune.html  nn-upscale-qdq.js  nn-upscale.js  serve.py  upscale.js  worker.js  worklet.js
web/models/: realesr-animevideov3-fp16.mega.json  realesr-animevideov3-fp16.mega.qdq.json
(+1 files in other folders)
