[package]
name = "rustpal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
winit = "0.30"
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pixels = "0.15"
cpal = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["DedicatedWorkerGlobalScope", "console"] }

[profile.release]
opt-level = 3
